# picard-plugin-protect_track_cover

./: CHANGELOG.md  README.md  pyproject.toml
protect_track_cover/: __init__.py  albums_warning.ui  all_albums_warning_dialog.ui  example.html  ui_all_albums_warning_dialog.py
